2005-03-28  Per Bothner  <per@bothner.com>

	* BRL.java: Update for recent changes to Scheme class.
	(brlEnvironment): New static final field.

2005-03-24  Per Bothner  <per@bothner.com>

	* BRL.java (instance): Replace static field by ...
	(krl_instance, brl_instance): ... two new fields.
	(<init>): Don't set instance field.
	(getKrlInstance, getBrlInstance): Set appropriate instance field.

2005-03-17  Per Bothner  <per@bothner.com>

	* BRL.java (createReadTable): New method.
	* BRLRead.java (getReadTable): Remove method.
	(brlReadTable): Remove field.
	(set_string_start): Removed method - inlined in creatReadTable.
	(brlReader): Move to ..
	* BRL.java: ... and make static.

2005-03-07  Per Bothner  <per@bothner.com>

	* BRL.java: Update Interpreter -> Language.

2005-02-24  Per Bothner  <per@bothner.com>

	* BRL.java (registerEnvironment): Use new setDefaults method.

2004-12-27  Per Bothner  <per@bothner.com>

	* Makefile.am: No longer need to force ../../../kawa to be made first.

2004-10-26  Per Bothner  <per@bothner.com>

	* BRLRead.java (brlReadTable): Set using new makeSchemeReadTable.

2004-07-20  Per Bothner  <per@bothner.com>

	* BRL.java:  Remove unused import statements.
	* BRLReaderString.java:  Likewise.

2004-01-09  Per Bothner  <per@bothner.com>

	* BRL.java (registerEnvironment):  Update setCurrent to setGlobal.

2003-11-20  Per Bothner  <per@bothner.com>

	* BRL.java (parse):  Remove - use inherited method instead.
	* BRLReaderString.java (read):  Return on '\n' if isInteractive().
	Emit error if nested and eof seen.
	Call saveExpressionStartPosition to note location of '['.
	* BRLRead.java (saveExpressionStartPosition):  New helper method.
	(readObject):  Defer literal text handling to BRLReaderString.
	Emit "unmatched '['" error here.  Various other fixes.

2003-11-06  Per Bothner  <per@bothner.com>

	* BRL.java (parse):  Update to take a Lexer rather than an InPort.

2003-11-02  Per Bothner  <per@bothner.com>
